# rendy

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
core/: Cargo.toml
core/src/: buffer.rs  device.rs  errors.rs  escape.rs  factory.rs  format.rs  image.rs  lib.rs  memory.rs  object.rs  shop.rs  surface.rs  swapchain.rs  tracker.rs
core/src/command/: buffer.rs  capability.rs  encoder.rs  family.rs  fence.rs  mod.rs  pool.rs  queue.rs
rendy/: Cargo.toml
rendy/examples/quad/: main.rs
rendy/src/: lib.rs
