[package]
name = "rendy-core"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/omni-viral/rendy.git"
documentation = "https://docs.rs/crate/rendy-core/0.1.0/rendy-core"
description = "Vulkan based renderer"
keywords = ["graphics", "Vulkan", "ash", "render", "unsafe"]

[dependencies]
ash = "*"
failure = "*"
relevant = "*"
crossbeam-channel = "*"
smallvec = "*"
