[package]
name = "rendy-core"
version = "0.0.1"
authors = ["omni-viral <scareaangel@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/omni-viral/rendy.git"
documentation = "https://docs.rs/crate/rendy-core/0.1.0/rendy-core"
description = "Vulkan based renderer"
keywords = ["graphics", "Vulkan", "ash", "render", "unsafe"]

[dependencies]
ash = "0.24"
failure = "0.1"
log = "0.4"
relevant = "0.1"
crossbeam-channel = "0.2"
smallvec = "0.6"
winit = "*"

[target.'cfg(windows)'.dependencies]
[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa = "*"
objc = "*"

